# twitux

./: Makefile.am  README  README.md  TODO  autogen.sh  configure.ac
data/: Makefile.am  org.gnome.Twitux.gschema.xml  twitux-app-menu.xml  twitux.desktop.in.in
po/: POTFILES.in
src/: Makefile.am  main.c  twitux-app.c  twitux-app.h  twitux-entry-input.c  twitux-entry-input.h  twitux-entry.c  twitux-entry.h  twitux-geometry.c  twitux-geometry.h  twitux-settings.h  twitux-utils.c  twitux-utils.h  twitux-viewer-tile.c  twitux-viewer-tile.h  twitux-viewer.c  twitux-viewer.h  twitux-window.c  twitux-window.h
